// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GridViewFieldLookup component > URL lookup field shows hyperlink when active 1`] = `
<div
  class="array-field__item"
  field="[object Object]"
  readonly="false"
  storeprefix="page/"
  workspaceid="10"
>
  <div
    class="array-field__ellipsis"
    title="example.com"
  >
    <a
      class="forced-pointer-events-auto"
      href="https://example.com"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      example.com
    </a>
  </div>
</div>
`;

exports[`GridViewFieldLookup component > URL lookup field shows text when inactive 1`] = `
<div
  class="array-field__item"
  field="[object Object]"
  readonly="false"
  storeprefix="page/"
  workspaceid="10"
>
  <div
    class="array-field__ellipsis"
    title="example.com"
  >
    <u>
      example.com
    </u>
  </div>
</div>
`;
